--- a/17.2-activities/01_Containers_Structure/unsolved/css/style.css
+++ b/17.2-activities/01_Containers_Structure/unsolved/css/style.css
@@ -1,1 +1,103 @@
 /*  Hi! your going to write styles here in the next couple activities. */
+.header {
+    height: 250px;
+    max-height: 500px;
+    background-image: url(../images/upsBackground.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+#pageTopic {
+    text-align: center;
+}
+
+.colorContainer {
+    display: inline-block;
+    margin: 15px;
+}
+
+.swatch {
+    height: 200px;
+    width: 170px;
+    border: 1px solid black;
+}
+
+.hex-code {
+    padding: 15px;
+    text-align: center;
+    border: 1px solid black;
+    border-top: none;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+
+.type_container {
+    display: inline-block;
+    margin: 20px;
+}
+
+.regular {
+    font-weight: normal;
+    font-size: 50px;
+}
+
+.bold {
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.large-light {
+    font-weight:lighter;
+    font-size: 50px;
+} 
+
+.button {
+    display: inline-block;
+    padding: 15px;
+    margin: 15px;
+    width: 150px;
+    text-align: center;
+    color: #333366;
+    outline: 1px solid red;
+
+}
+
+.darkblue {
+    background-color: #333366;
+
+}
+
+.darkgrey {
+    background-color: #545454;
+
+}
+
+.lightgrey {
+    background-color: #E3E3E3;
+
+}
+
+.white {
+    background-color: #FFFFFF;
+
+}
+
+.lightblue {
+    background-color: #13A0F6;
+
+}
+
+.red {
+    background-color: #F84848;
+
+}
+
+.orange {
+    background-color: #FC7705;
+}
+
+.lightgreen {
+    background-color: #8ABE48;
+}
+
