--- a/17.3_activities/01_Positioning_Elements/1_floats/unsolved/css/index.css
+++ b/17.3_activities/01_Positioning_Elements/1_floats/unsolved/css/index.css
@@ -2,7 +2,18 @@ h1 {
  font-family: helvetica, arial, sans-serif;
 }
 /* Write your selector for .left below */
-
+.left { 
+    float: left;
+    padding-right: 15px;
+    margin: 25px;
+}
 /* Write your selector for .right below */
-
+.right {
+    float: right;
+    padding-left: 15px;
+    margin: 25px;
+}
 /* Write your selector for .separator below */
+.separator {
+    width: 750px;
+}
