--- a/17.3_activities/01_Positioning_Elements/2_block_and_inline_elements/unsolved/css/index.css
+++ b/17.3_activities/01_Positioning_Elements/2_block_and_inline_elements/unsolved/css/index.css
@@ -2,6 +2,8 @@
   width: 355px;
   background-color: lightblue;
   padding: 35px;
+  margin: 0 auto;
+  text-align: left;
 /* Add margin here. */
 /* Add text align below */
 }
