--- a/17.3_activities/01_Positioning_Elements/3_inline_block_elements/unsolved/css/index.css
+++ b/17.3_activities/01_Positioning_Elements/3_inline_block_elements/unsolved/css/index.css
@@ -5,6 +5,23 @@ nav {
 
 /* target the class of inline-block below */
 
+.inline-block {
+  display: inline-block;
+  padding: 15px;
+}
 /* target the class of .left below */
 
+.left {
+  height: 500px;
+  float: left;
+  background-color: lightblue;
+  width: 30%;
+}
 /* target the class of .right below */
+
+.right {
+  height: 500px;
+  float: left;
+  background-color: lightgreen;
+  width: 70%;
+}
