--- a/18.1-activities/01_Your_First_Flex_Layout/unsolved/css/index.css
+++ b/18.1-activities/01_Your_First_Flex_Layout/unsolved/css/index.css
@@ -8,13 +8,16 @@
   padding: 10px;
   margin: 10px;
   /* Set the property display to flex below! */
+  display: flex;
 }
 #column {
   background-color: #E6F5FF;
   /* Set the property flex direction to column below! */
+  flex-direction: column;
 }
 #row {
   background-color: #FFF7DE;
 /* Set the property flex-direction to row below! */
+  flex-direction: row; 
 }
  
