--- a/18.3-activities/01_transforms/unsolved/css/index.css
+++ b/18.3-activities/01_transforms/unsolved/css/index.css
@@ -16,7 +16,7 @@ body {
   text-align: center;
 }
 .rotate img {
-/* Write your rotate transform here */
+  transform: rotate(-45deg);
 }
 .scale {
   grid-area: scale;
@@ -29,7 +29,7 @@ body {
   height: 50px;
   background-color: red;
   margin: 0 auto;
-  /* Write the scale transform here */
+  transform: scale(2,4);
 
 }
 .translate {
@@ -42,7 +42,7 @@ body {
   width: 100px;
   height: 100px;
   background-color: blue;
-  /* Write the translate transform here */
+  transform: translate(80%, 40%);
 }
 
 .gridChild {
