--- a/19.1-activities/05_Build_a_toggle/unsolved/css/style.css
+++ b/19.1-activities/05_Build_a_toggle/unsolved/css/style.css
@@ -1,1 +1,46 @@
 /* Style your dropdown below! */
+#toggle {
+    margin:0 auto;
+    width:300px;
+    text-transform: uppercase;
+    text-align:center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+#toggle p {
+    background-color:salmon;
+    color: white;
+    padding: 10px;
+    margin-bottom: 0;
+
+}
+
+#toggle img {
+    width: 15px;
+    padding-top:5px;
+    padding-left:5px;
+}
+
+.rotate {
+    transform: rotateX(180deg);
+    
+}
+
+#toggle li {
+    margin:0 auto;
+    padding: 10px;
+    cursor: pointer;
+    border-top:.5px solid black;
+    font-weight:bold;
+    
+}
+#toggle ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 0;
+    display: none;
+    border-bottom:.5px solid black;
+    border-left:.5px solid black;
+    border-right:.5px solid black;
+}
